--- a/src/WordListPart.css
+++ b/src/WordListPart.css
@@ -1,5 +1,8 @@
 .wordList-part {
-    display: flex;
     flex: 0.5;
     height: 500px;
+}
+.wordList-part u{
+    display: flex;
+    width: 400px;
 }
