--- a/src/ResultCard.css
+++ b/src/ResultCard.css
@@ -1,6 +1,8 @@
 .resultCard {
-    width:45%;
-    height:10rem;
-    background-color: whitesmoke;
-    margin: 10px
-}
+    width: 45%;
+    height: 10rem;
+    margin: 10px;
+    background-color: white;
+    box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
+  }
+  
