--- a/src/Header.css
+++ b/src/Header.css
@@ -1,8 +1,9 @@
 .header {
     display: flex;
-    background-color: gray;
     height: 5rem;
     justify-content: space-between;
+    box-shadow: 0 1px 2px 0 rgb(60 60 60 / 30%);
+    position:relative;
 }
 
 .header h1 {
